<?xml version="1.0" encoding="utf-8"?>
<!--
**
** 	 Copyright (C) 2008-2010 pjv (and others, see About dialog)
** 
** 	 This file is part of Android's Fortune.
**
**   Android's Fortune is free software: you can redistribute it and/or modify
**   it under the terms of the GNU General Public License as published by
**   the Free Software Foundation, either version 3 of the License, or
**   (at your option) any later version.
**
**   Android's Fortune is distributed in the hope that it will be useful,
**   but WITHOUT ANY WARRANTY; without even the implied warranty of
**   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
**   GNU General Public License for more details.
**
**   You should have received a copy of the GNU General Public License
**   along with Android's Fortune.  If not, see <http://www.gnu.org/licenses/>.
*/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ll" android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<Button android:text="@string/label_b_refresh" android:id="@+id/b_refresh"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_marginBottom="10dp"/>
    <Button android:text="@string/label_b_show_cookie" android:id="@+id/b_show_cookie"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_marginBottom="10dp"/>
	<Button android:text="@string/label_b_cancel" android:id="@+id/b_cancel"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_marginBottom="10dp"/>
</LinearLayout>
